Native/Test/KL/cond-expr-unrelated.out
cond-expr-unrelated.kl:11:3: error: ternary operation: types 'Integer' and 'Vec3' are unrelated
