Native/Test/KL/cond-expr-unrelated.kl
struct Vec3
{
  Scalar x;
  Scalar y;
  Scalar z;
};

operator entry()
{
  var Vec3  vec;
  true ? 17 : vec;
}
